# p_functions

./: .agentignore  .claudeignore  .dockerignore  .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  __init__.py  interface.py  probability_functions.py  pyproject.toml  relu.py  requirements.txt  sigmoid.py  tests.py
.github/workflows/: ci.yml
src/p_functions/: __init__.py  sigmoid.py
tests/: test_probability_functions.py
