[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p_functions"
version = "0.3.0"
description = "Utilities for experimenting with probability-related functions used in machine learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "p_functions contributors"}
]
keywords = ["machine-learning", "probability", "sigmoid", "relu", "activation-functions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=22.0",
    "isort>=5.0",
]
api = [
    "anthropic>=0.60.0",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/username/p_functions"
Repository = "https://github.com/username/p_functions.git"
Issues = "https://github.com/username/p_functions/issues"

[project.scripts]
p-functions = "interface:main"

[tool.setuptools]
packages = ["p_functions"]

[tool.setuptools.package-dir]
p_functions = "."

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true